# PPDOfflineMessagingApp

./: .gitignore  ApplicationMain.cpp  ApplicationMain.h  CMakeLists.txt  README.md  cmake_build.sh  compile_commands.json  main.cpp
chat/: CMakeLists.txt  ContactsService.hpp  MessageService.cpp  MessageService.hpp  ServerConnection.cpp  ServerConnection.hpp
network/: client.cpp  client.h  socket_utils.cpp
scripts/: servermock.py
ui/: CMakeLists.txt  QTChat.cpp  QTChat.hpp  QTContacts.cpp  QTContacts.hpp
utils/: CMakeLists.txt  split.cpp  split.hpp  split_test.cpp
